# gof-patterns-python

./: pyproject.toml
src/creational/factories/abstract_factory/: af.py
src/creational/factories/factoy_method/: fm.py
src/creational/factories/simple_factory/: sf01.py  sf02.py
